; ModuleID = '/home/carl/AnghaBench/RetroArch/input/drivers_hid/extr_btstack_hid.c_btpad_queue_btstack_set_power_mode.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/drivers_hid/extr_btstack_hid.c_btpad_queue_btstack_set_power_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btpad_queue_command = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@btstack_set_power_mode_ptr = common dso_local global i32 0, align 4
@insert_position = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.btpad_queue_command*, i32)* @btpad_queue_btstack_set_power_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @btpad_queue_btstack_set_power_mode(%struct.btpad_queue_command* %0, i32 %1) #0 {
  %3 = alloca %struct.btpad_queue_command*, align 8
  %4 = alloca i32, align 4
  store %struct.btpad_queue_command* %0, %struct.btpad_queue_command** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.btpad_queue_command*, %struct.btpad_queue_command** %3, align 8
  %6 = icmp ne %struct.btpad_queue_command* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %2
  br label %18

8:                                                ; preds = %2
  %9 = load i32, i32* @btstack_set_power_mode_ptr, align 4
  %10 = load %struct.btpad_queue_command*, %struct.btpad_queue_command** %3, align 8
  %11 = getelementptr inbounds %struct.btpad_queue_command, %struct.btpad_queue_command* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 4
  %12 = load i32, i32* %4, align 4
  %13 = load %struct.btpad_queue_command*, %struct.btpad_queue_command** %3, align 8
  %14 = getelementptr inbounds %struct.btpad_queue_command, %struct.btpad_queue_command* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  store i32 %12, i32* %15, align 4
  %16 = call i32 @btpad_increment_position(i32* @insert_position)
  %17 = call i32 (...) @btpad_queue_process()
  br label %18

18:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @btpad_increment_position(i32*) #1

declare dso_local i32 @btpad_queue_process(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
